flicker issue resolved

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -769,7 +769,7 @@ a:focus {
 }
 
 .service .service-item:hover {
-    box-shadow: inset 800px 0 0 0 #EF233C;
+    box-shadow: inset 320px 0 0 0 #EF233C;
 }
 
 .skills .progress .skill {
